<resources>
    <string name="app_name">LetUsChat</string>
    <string name="let_us_chat">Let Us Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="user_status">User Status</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>
    <string name="vikash_verma">VIKASH VERMA</string>
    <string name="shivam_sonkar">SHIVAM SONKAR</string>
    <string name="developers">Developers</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="hi_i_m_using_letuschat">Hi ! I\'m using LetUsChat.</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="already_have_account">Already have Account</string>
    <string name="need_a_new_account">Need A New Account ?</string>
    <string name="welcome_to_let_us_chat">Welcome To Let Us Chat</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="chats_page">CHATS PAGE</string>
    <string name="request_page">REQUEST PAGE</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="profile_name">Profile Name</string>
    <string name="last_seen">Last Seen</string>
    <string name="type_a_message">Type a message...</string>
</resources>
