<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/start_welcome_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_let_us_chat"
        />

    <Button
        android:id="@+id/start_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_a_new_account"
        android:layout_below="@id/start_welcome_textView"
        />

    <Button
        android:id="@+id/start_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:layout_below="@id/start_register_button"
        />

</RelativeLayout>